# views_storage

./: ViewsSFTP.py  pyproject.toml  tests.py
.github/workflows/: ci.yml
tests/: test_azure.py  test_database_backend.py  test_key_value_store.py  test_serializers.py  test_sftp_integration.py
tests/mock_key_db/: Dockerfile  init.sql
tests/testcert/: test_priv  test_pub
views_sftp/: model_object_operations.py  operations.py  settings.py
views_storage/: dataframe_operations.py  key_value_store.py  models.py  sftp_storage.py
views_storage/backends/: __init__.py  database.py  dict.py  local.py  sftp.py  storage_backend.py
views_storage/serializers/: __init__.py  csv.py  pydantic.py
